syntax = "proto3";

package urbanpulse;

message CongestionAlert {
    string alertId = 1;
    string sensorId = 2;
    double latitude = 3;
    double longitude = 4;
    int32 vehicleCount = 5;
    int64 timestamp = 6;
}